compiler/tests/success/test_reg_ptr1.jazz
u64[4] glob_t = { 0, 1, 2, 3 };

export fn foo (reg u64 x) -> reg u64 {
  reg u64 r;
  reg ptr u64[4] rt;
  stack ptr u64[4] st;
  stack u64[4] s;
  inline int i;

  for i = 0 to 4 { 
    s[i] = x;
  }

  rt = s;
  r = 0;
  for i = 0 to 4 {
    r += rt[0];
  } 

  st = rt;
  
  for i = 0 to 4 {
    r += s[0];
  } 

  rt = st;

  for i = 0 to 4 {
    rt[i] = 0;
  } 

  for i = 0 to 4 {
    r += rt[0];
  } 

  s = rt; 

  for i = 0 to 4 {
    r += s[0];
  } 

  return r;

}
