compiler/tests/fail/stack_allocation/slice_same2.jazz
export fn foo (reg u64 x) -> reg u64 {
  reg u64 r;
  stack u64[4] s;
  reg ptr u64[4] rt;
  stack ptr u64[4] st;
  inline int i;
  for i = 0 to 4 {
    x = x + i;
    s[i] = x;
  }
  rt = s;
  st = rt;
  r = 0;
  for i = 0 to 4 {
    r = r + rt[i];
    st[i] = i;
  }
  rt[0:2] = st[2:2];
  for i = 0 to 4 {
    r = r + rt[i];
  }
  r = r + rt[2];
  r = r + s[3];
  return r;
}
